--- a/public/about-2.html
+++ b/public/about-2.html
@@ -127,7 +127,7 @@
                                     <h4>Find Us Our Location</h4>
                                     <ul class="info clearfix">
                                         <li><i class="icon-180"></i>629 12th St, Modesto, CA 95354 United States</li>
-                                        <li><i class="icon-181"></i><a href="mailto:atrixmain@gmail.com">atrixmain@gmail.com</a></li>
+                                        <li><i class="icon-181"></i><a href="mailto:ZenoGenZmain@gmail.com">ZenoGenZmain@gmail.com</a></li>
                                         <li><i class="icon-182"></i><a href="tel:123045615523">123455</a></li>
                                     </ul>
                                 </div>
@@ -462,7 +462,7 @@
             <div class="close-btn"><i class="fas fa-times"></i></div>
 
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="assets/images/mobile-logo.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="assets/images/z-blak-logo1.png" alt="" title=""></a></div>
                 <div class="menu-outer">
                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                 </div>
@@ -470,7 +470,7 @@
                     <h4>Contact Info</h4>
                     <ul>
                         <li>thoothukudi</li>
-                        <li><a href="tel:+8801682648101">+91-9444-7810-55</a></li>
+                        <li><a href="tel:+919444781055">+91-9444-7810-55</a></li>
                         <li><a href="mailto:info@example.com">info@example.com</a></li>
                     </ul>
                 </div>
@@ -983,7 +983,7 @@
                 <div class="auto-container">
                     <div class="bottom-inner clearfix">
                         <div class="copyright pull-left">
-                            <p><a href="index.html">ZENOGENZ</a> &copy; 2021 All Right Reserved</p>
+                            <p><a href="index.html">ZENOGENZ</a> &copy; 2024 All Right Reserved</p>
                         </div>
                         <ul class="footer-nav clearfix pull-right">
                             <li><a href="index.html">Terms of Service</a></li>
