--- a/public/index-6.html
+++ b/public/index-6.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>Atrix - HTML 5 Template Preview</title>
+    <title>ZenoGenZ - HTML 5 Template Preview</title>
 
     <!-- Fav Icon -->
     <link rel="icon" href="assets/images/favicon-12.ico" type="image/x-icon">
@@ -113,14 +113,14 @@
                                     <a href="index.html"><img src="assets/images/logo-14.png" alt="" /></a>
                                 </div>
                                 <div class="text-box">
-                                    <h4>About Atrix</h4>
+                                    <h4>About ZenoGenZ</h4>
                                     <p>Lorem ipsum dolor amet consectetur adipisicing sed do eiusmod tempor incididunt labore magna aliqua enim minim veniam nostrud exercitation aboris nis aliquip exeo.</p>
                                 </div>
                                 <div class="info-inner">
                                     <h4>Find Us Our Location</h4>
                                     <ul class="info clearfix">
                                         <li><i class="icon-180"></i>629 12th St, Modesto, CA 95354 United States</li>
-                                        <li><i class="icon-181"></i><a href="mailto:atrixmain@gmail.com">atrixmain@gmail.com</a></li>
+                                        <li><i class="icon-181"></i><a href="mailto:ZenoGenZmain@gmail.com">ZenoGenZmain@gmail.com</a></li>
                                         <li><i class="icon-182"></i><a href="tel:123045615523">+1 (230)-456-155-23</a></li>
                                     </ul>
                                 </div>
@@ -455,15 +455,15 @@
             <div class="close-btn"><i class="fas fa-times"></i></div>
 
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="assets/images/mobile-logo.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="assets/images/z-blak-logo1.png" alt="" title=""></a></div>
                 <div class="menu-outer">
                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                 </div>
                 <div class="contact-info">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li>Chicago 12, Melborne City, USA</li>
-                        <li><a href="tel:+8801682648101">+88 01682648101</a></li>
+                        <li>Thoothukudi</li>
+                        <li><a href="tel:+919444781055">+91-9444781055</a></li>
                         <li><a href="mailto:info@example.com">info@example.com</a></li>
                     </ul>
                 </div>
@@ -564,7 +564,7 @@
                         <div class="content_block_nine">
                             <div class="content-box p_relative d_block ml_40">
                                 <div class="sec-title-nine p_relative d_block mb_25">
-                                    <h6 class="d_iblock pl_20 pr_20 fs_14 lh_30 b_radius_5 mb_18 fw_medium font_family_poppins">About Atrix</h6>
+                                    <h6 class="d_iblock pl_20 pr_20 fs_14 lh_30 b_radius_5 mb_18 fw_medium font_family_poppins">About ZenoGenZ</h6>
                                     <h2 class="d_block fs_45 lh_55 fw_bold font_family_jost">We Are Fully <br />Integrated Digital Agency</h2>
                                 </div>
                                 <div class="text p_relative d_block mb_35">
@@ -995,7 +995,7 @@
             <div class="auto-container">
                 <div class="sec-title-nine p_relative d_block mb_50 centred">
                     <h6 class="d_iblock pl_20 pr_20 fs_14 lh_30 b_radius_5 mb_18 fw_medium font_family_poppins">Latest Articles</h6><br />
-                    <h2 class="d_block fs_45 lh_55 fw_bold font_family_jost">Stay Update with <br />Atrix News</h2>
+                    <h2 class="d_block fs_45 lh_55 fw_bold font_family_jost">Stay Update with <br />ZenoGenZ News</h2>
                 </div>
                 <div class="row clearfix">
                     <div class="col-lg-4 col-md-6 col-sm-12 news-block">
@@ -1173,8 +1173,8 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul class="info-list clearfix">
-                                        <li>Flat 20, Reynolds Neck, North Helenaville, FV77 8WS</li>
-                                        <li><a href="tel:+919444781055">++91-9444-7810-55</a></li>
+                                        <li>THOOTHUKUDI</li>
+                                        <li><a href="tel:+919444781055">+91-9444-7810-55</a></li>
                                         <li><a href="mailto:sample@example.com">sample@example.com</a></li>
                                     </ul>
                                 </div>
@@ -1187,7 +1187,7 @@
                 <div class="auto-container">
                     <div class="bottom-inner centred">
                         <div class="copyright">
-                            <p><a href="index.html">ATRIX</a> &copy; 2021 All Right Reserved</p>
+                            <p><a href="index.html">ZenoGenZ</a> &copy; 2024 All Right Reserved</p>
                         </div>
                     </div>
                 </div>
