--- a/public/index.html
+++ b/public/index.html
@@ -450,15 +450,15 @@
             <div class="close-btn"><i class="fas fa-times"></i></div>
 
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="assets/images/mobile-logo.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="assets/images/z-blak-logo1.png" alt="" title=""></a></div>
                 <div class="menu-outer">
                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                 </div>
                 <div class="contact-info">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li>Chicago 12, Melborne City, USA</li>
-                        <li><a href="tel:+8801682648101">+88 01682648101</a></li>
+                        <li>Thoothukudi</li>
+                        <li><a href="tel:+919444781055">+91-9444781055</a></li>
                         <li><a href="mailto:info@example.com">info@example.com</a></li>
                     </ul>
                 </div>
@@ -1443,7 +1443,7 @@
                                     <div class="image-box p_relative d_block">
                                         <figure class="image p_relative d_block"><a href="blog-details.html"><img src="assets/images/news/news-1.jpg" alt=""></a></figure>
                                         <div class="post-date p_absolute l_30 t_30 b_shadow_6 pt_1 pr_19 pb_1 pl_19 z_1">
-                                            <h6 class="p_relative d_iblock fs_15 fw_medium g_color">Oct 20, 2021</h6>
+                                            <h6 class="p_relative d_iblock fs_15 fw_medium g_color">Oct 20, 2024</h6>
                                         </div>
                                     </div>
                                     <div class="lower-content p_relative d_block pt_30 pr_30 pb_40 pl_40">
@@ -1466,7 +1466,7 @@
                                     <div class="image-box p_relative d_block">
                                         <figure class="image p_relative d_block"><a href="blog-details.html"><img src="assets/images/news/news-2.jpg" alt=""></a></figure>
                                         <div class="post-date p_absolute l_30 t_30 b_shadow_6 pt_1 pr_19 pb_1 pl_19 z_1">
-                                            <h6 class="p_relative d_iblock fs_15 fw_medium g_color">Oct 15, 2021</h6>
+                                            <h6 class="p_relative d_iblock fs_15 fw_medium g_color">Oct 15, 2024</h6>
                                         </div>
                                     </div>
                                     <div class="lower-content p_relative d_block pt_30 pr_30 pb_40 pl_40">
@@ -1489,7 +1489,7 @@
                                     <div class="image-box p_relative d_block">
                                         <figure class="image p_relative d_block"><a href="blog-details.html"><img src="assets/images/news/news-3.jpg" alt=""></a></figure>
                                         <div class="post-date p_absolute l_30 t_30 b_shadow_6 pt_1 pr_19 pb_1 pl_19 z_1">
-                                            <h6 class="p_relative d_iblock fs_15 fw_medium g_color">Oct 12, 2021</h6>
+                                            <h6 class="p_relative d_iblock fs_15 fw_medium g_color">Oct 12, 2024</h6>
                                         </div>
                                     </div>
                                     <div class="lower-content p_relative d_block pt_30 pr_30 pb_40 pl_40">
@@ -1525,7 +1525,7 @@
                 <div class="auto-container">
                     <div class="top-inner clearfix">
                         <figure class="footer-logo pull-left">
-                            <a href="index.html"><img src="assets/images/z-blak-logo1.png" alt=""></a>
+                            <a href="index.html"><img src="assets/images/z-blak-logo1.pn" alt=""></a>
                         </figure>
                         <ul class="social-links pull-right clearfix">
                             <li><a href="index.html"><i class="fab fa-facebook-f"></i></a></li>
@@ -1567,9 +1567,9 @@
                                         <li><a href="index.html">About</a></li>
                                         <li><a href="index.html">Services</a></li>
                                         <li><a href="index.html">Job</a></li>
-                                        <li><a href="index.html">opportunities</a></li>
+                                        <!-- <li><a href="index.html">opportunities</a></li>
                                         <li><a href="index.html">Location</a></li>
-                                        <li><a href="index.html">Article</a></li>
+                                        <li><a href="index.html">Article</a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -1581,9 +1581,9 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul class="links-list clearfix">
-                                        <li><a href="index.html">About</a></li>
+                                        <!-- <li><a href="index.html">About</a></li>
                                         <li><a href="index.html">Services</a></li>
-                                        <li><a href="index.html">Job</a></li>
+                                        <li><a href="index.html">Job</a></li> -->
                                         <li><a href="index.html">opportunities</a></li>
                                         <li><a href="index.html">Location</a></li>
                                         <li><a href="index.html">Article</a></li>
@@ -1598,7 +1598,7 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul class="info-list clearfix">
-                                        <li>Flat 20, Reynolds Neck, North Helenaville, FV77 8WS</li>
+                                        <li>THOOTHUKUDI</li>
                                         <li><a href="tel:+919444781055">++91-9444-7810-55</a></li>
                                         <li><a href="mailto:sample@example.com">sample@example.com</a></li>
                                     </ul>
@@ -1612,7 +1612,7 @@
                 <div class="auto-container">
                     <div class="bottom-inner clearfix">
                         <div class="copyright pull-left">
-                            <p><a href="index.html">ATRIX</a> &copy; 2021 All Right Reserved</p>
+                            <p><a href="index.html">ZenoGenZ</a> &copy; 2024 All Right Reserved</p>
                         </div>
                         <ul class="footer-nav clearfix pull-right">
                             <li><a href="index.html">Terms of Service</a></li>
