--- a/public/project.html
+++ b/public/project.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-    <title>Atrix - HTML 5 Template Preview</title>
+    <title>ZenoGenZ - HTML 5 Template Preview</title>
 
     <!-- Fav Icon -->
     <link rel="icon" href="assets/images/favicon-3.ico" type="image/x-icon">
@@ -111,14 +111,14 @@
                                     <a href="index.html"><img src="assets/images/logo-16.png" alt="" /></a>
                                 </div>
                                 <div class="text-box">
-                                    <h4>About Atrix</h4>
+                                    <h4>About ZenoGenZ</h4>
                                     <p>Lorem ipsum dolor amet consectetur adipisicing sed do eiusmod tempor incididunt labore magna aliqua enim minim veniam nostrud exercitation aboris nis aliquip exeo.</p>
                                 </div>
                                 <div class="info-inner">
                                     <h4>Find Us Our Location</h4>
                                     <ul class="info clearfix">
                                         <li><i class="icon-180"></i>629 12th St, Modesto, CA 95354 United States</li>
-                                        <li><i class="icon-181"></i><a href="mailto:atrixmain@gmail.com">atrixmain@gmail.com</a></li>
+                                        <li><i class="icon-181"></i><a href="mailto:ZenoGenZmain@gmail.com">ZenoGenZmain@gmail.com</a></li>
                                         <li><i class="icon-182"></i><a href="tel:123045615523">+1 (230)-456-155-23</a></li>
                                     </ul>
                                 </div>
@@ -453,15 +453,15 @@
             <div class="close-btn"><i class="fas fa-times"></i></div>
 
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="assets/images/mobile-logo.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="assets/images/z-blak-logo1.png" alt="" title=""></a></div>
                 <div class="menu-outer">
                     <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                 </div>
                 <div class="contact-info">
                     <h4>Contact Info</h4>
                     <ul>
-                        <li>Chicago 12, Melborne City, USA</li>
-                        <li><a href="tel:+8801682648101">+88 01682648101</a></li>
+                        <li>Thoothukudi</li>
+                        <li><a href="tel:+919444781055">+91-9444781055</a></li>
                         <li><a href="mailto:info@example.com">info@example.com</a></li>
                     </ul>
                 </div>
@@ -686,8 +686,8 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul class="info-list clearfix">
-                                        <li>Flat 20, Reynolds Neck, North Helenaville, FV77 8WS</li>
-                                        <li><a href="tel:+919444781055">++91-9444-7810-55</a></li>
+                                        <li>THOOTHUKUDI</li>
+                                        <li><a href="tel:+919444781055">+91-9444-7810-55</a></li>
                                         <li><a href="mailto:sample@example.com">sample@example.com</a></li>
                                     </ul>
                                 </div>
@@ -700,7 +700,7 @@
                 <div class="auto-container">
                     <div class="bottom-inner clearfix">
                         <div class="copyright pull-left">
-                            <p><a href="index.html">ATRIX</a> &copy; 2021 All Right Reserved</p>
+                            <p><a href="index.html">ZenoGenZ</a> &copy; 2024 All Right Reserved</p>
                         </div>
                         <ul class="footer-nav clearfix pull-right">
                             <li><a href="index.html">Terms of Service</a></li>
